--- a/backend/templates/create.html
+++ b/backend/templates/create.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Создание</title>
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         <h3>Добавить</h3>
