--- a/backend/templates/edit.html
+++ b/backend/templates/edit.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Смена</title>
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
         <h3>Поменять</h3>
