--- a/backend/templates/orders.html
+++ b/backend/templates/orders.html
@@ -11,11 +11,8 @@
    <form action="#"> 
 	<fieldset>
 	<legend>Таблица заказов</legend>
-	<!-- <table>	<br>
-		<tr>
-			<input type="button" onclick="location.href='/create';" value="Добавить заказ" /> 
-		</tr>
-	</table> -->
+	<link rel="stylesheet" href="/static/css/style.css">
+	</table>
 	<table border=2>
 		<thead>	  
 			<th>Order_uid</th>
