--- a/backend/templates/items.html
+++ b/backend/templates/items.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Товаров</title>
     <style> </style>
-	<link rel="stylesheet" type="text/css" href="css/STYLES.css">
-
+	<link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
    <form action="#"> 
