Версия для показа

--- a/backend/templates/mainpage.html
+++ b/backend/templates/mainpage.html
@@ -8,7 +8,7 @@
     <body>
         <nav>
             <ul>
-                <li><a href="searchorder">Заказы</a></li>
+                <li><a href="searchorder">Поиск товаров по UID заказа</a></li>
                 <li><a href="all_orders">Все заказы</a></li>
                 <li><a href="all_deliveries">Все поставщики</a></li>
                 <li><a href="all_items">Все заказанные товары</a></li>
